--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,16 +1,17 @@
 @import './base.css';
 
 #app {
-  display: flex;
-  flex-direction: column;
-  background-color: #f1f1f1;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: #f1f1f1;
+    min-height: 100vh;
+    min-width: 1000px;
 }
 
 #main {
-  flex-grow: 1
+    flex-grow: 1
 }
 
 #main, #footer {
-  flex-shrink: 0;
+    flex-shrink: 0;
 }
