--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     background-color: #f1f1f1;
     min-height: 100vh;
-    min-width: 1000px;
+    /*min-width: 1000px;*/
 }
 
 #main {
